--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "github-calendar": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
